--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Bora Özdek
-subtitle: Co-Founder & CEO @Zero0Labs
+subtitle: Co-Founder & CEO <a href="https://zero0labs.xyz" target="_blank">@zero0labs</a> 
 ---
